--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
@@ -19,10 +20,9 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "puppeteer": "^2.1.0",
     "request": "^2.88.2",
-    "validatorjs": "^3.22.1",
-    "cheerio": "^1.0.0-rc.3",
-    "puppeteer": "^2.1.0"
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "mocha": "^8.3.0"
