--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -27,6 +28,7 @@
     "validatorjs": "^3.22.1"
   },
   "devDependencies": {
-    "mocha": "^8.3.0"
+    "mocha": "^8.3.0",
+    "nodemon": "^2.0.7"
   }
 }
